--- a/ThaiTechEventsCalendar/Base.lproj/Main.storyboard
+++ b/ThaiTechEventsCalendar/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14092" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FpH-KY-O2Q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14092" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lcq-jv-yKf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,10 +10,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Event Tab View Controller-->
+        <scene sceneID="snY-MW-7C9">
+            <objects>
+                <viewController id="lcq-jv-yKf" customClass="EventTabViewController" customModule="ThaiTechEventsCalendar" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mf8-MQ-F0y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="zct-l9-FgV"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="duk-JA-k50" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1092" y="1455"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="lPO-Zj-59s">
             <objects>
-                <navigationController id="FpH-KY-O2Q" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="eventDetailNav" id="FpH-KY-O2Q" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="EnY-kj-cTN">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -29,7 +44,7 @@
         <!--Event Feed View Controller-->
         <scene sceneID="G1t-NQ-as3">
             <objects>
-                <viewController id="7ef-Vb-z1V" customClass="EventFeedViewController" customModule="ThaiTechEventsCalendar" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="eventDetail" id="7ef-Vb-z1V" customClass="EventFeedViewController" customModule="ThaiTechEventsCalendar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="n9G-0N-cx7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -58,7 +73,6 @@
                     <connections>
                         <outlet property="feedTableView" destination="jFj-pC-CuC" id="ySz-Xp-hYU"/>
                         <segue destination="Phq-dR-upj" kind="custom" identifier="eventDetail" customClass="DeckSegue" customModule="DeckTransition" id="DId-1n-Vks"/>
-                        <segue destination="Phq-dR-upj" kind="show" identifier="seg" id="xdn-EE-TdP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jqe-Yz-JKN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -74,7 +88,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="1FX-xR-BOv">
-                                <rect key="frame" x="0.5" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.5" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="44" id="Fah-jb-Bm7" customClass="DetailTableViewCell" customModule="ThaiTechEventsCalendar" customModuleProvider="target">
@@ -254,7 +268,4 @@
     <resources>
         <image name="calendar" width="37" height="37"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="xdn-EE-TdP"/>
-    </inferredMetricsTieBreakers>
 </document>
